<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Simple Budget</string>

    <string name="invitation_title">Send App Invitation</string>
    <string name="invitation_message">Hi try this app.</string>
    <string name="invitation_cta">Install!</string>
    <string name="app_playstore_link">https://play.google.com/store/apps/details?id=me.pushkaranand.simplebudget</string>
    <string name="appID">me.pushkaranand.simplebudget</string>

    <string name="aboutLibraries_description_showIcon" tools:keep="@string/aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion" tools:keep="@string/aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text" tools:keep="@string/aboutLibraries_description_text">Easily manage all your money. Track your spends and earnings. Tag you transactions. Add transaction specific notes.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_backup">Backup &amp; Reset</string>
    <string name="action_reset_spend">Reset Monthly Spends</string>
    <string name="action_feedback">Feedback</string>


    <string name="home">Home</string>
    <string name="tags">Tags</string>
    <string name="search">Search</string>
    <string name="share">Share</string>


    <string name="app_icon">App icon</string>

    <string name="transaction">Transaction</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="amount">Amount</string>
    <string name="notes_if_any">Notes(if Any)</string>
    <string name="save">Save</string>


    <!--For rupee symbol-->
    <string name="Rs">\u20B9</string>
    <!--For Rs text-->
    <string name="rs">\u20A8</string>


    <string name="available_balance">Available Balance</string>
    <string name="def_bal">\u20B900.00</string>

    <string name="tagline">Easily manage you savings and budgets</string>

    <string name="title_activity_tags">Tags</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="title_activity_view_transaction">ViewTransaction</string>
    <string name="title_activity_settings">Settings</string>


    <string name="spend">Spend</string>
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>

    <!--Real unit id-->
    <string name="banner_ad_unit_id">ca-app-pub-4200512046448987/1032467573</string>

    <!--Test unit id-->
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->


    <string name="last_backup">Last Backup:&#160;&#160;</string>
    <string name="backup_screen_info">Backup and restore transactions from google drive.\n Backing up on google drive allows to move data between devices.</string>
    <string name="reset">Reset</string>
    <string name="signed_in_as">Signed in as: Not signed in</string>

    <string name="fb_ad_placement_id">140258926665643_153169535374582</string>

</resources>
