<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bckCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.pushkaranand.simplebudget.BackupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/infoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backup_screen_info"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backupBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startBackup"
                android:text="@string/button_backup" />

            <Button
                android:id="@+id/restoreBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="startRestore"
                android:text="@string/button_restore" />
        </LinearLayout>

        <TextView
            android:id="@+id/LstBackupTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_backup"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
